@startuml Class Diagram for Twitter Clone

class User <<Entity>> {
  + id                : Number 
  + firstName         : String
  + lastName          : String
  + username          : String
  + email             : String
  + password          : String
  + about             : String
  + location          : String
  + webSite           : String
  + createdAt         : Date
  + profilePic        : String
  + tweets            : [Tweet]
  + likedTweets       : [Tweet]
  + followings        : [User]
  + followers         : [User]
  + home              : [Tweet]

  + tweet()
  + deleteTweet()
  + follow()
  + unfollow()
  + retweet()
  + undoRetweet()
  + like()
  + undoLike()
  + reply()
}

class Tweet <<Entity>> {
  + id            : Number
  + author        : User
  + content       : String
  + createdAt     : Date
  + attachments   : []
  + replies       : [Tweet]
  + retweets      : [Tweet]
  + likes         : [User]
}

class Retweet <<Entity>> {
  + originalTweet : Tweet
}

User *-- Tweet
Tweet <|-- Retweet

@enduml